# ColorPicker

./: .gitmodules  CMakeLists.txt
ColorPicker/: ColorPicker.pro  MainWindow.cpp  MainWindow.h  MainWindow.ui
scripts/: download-dependencies.lua
